subprojects/groovy-parser-antlr4/src/test/resources/fail/ConstructorDeclaration_01.groovy
class Foo { static final Foo() {}}